--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <!-- Header/Navbar -->
     <header class="bg-white shadow-sm py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-rebalance-blue rounded-md">Rebalance Physiotherapy</a>
+           <a href="#" class="rounded-md">
+    <img src="logo.png" alt="Rebalance Physiotherapy Clinic Logo" class="h-10 md:h-12">
+</a>
             <!-- Simple placeholder for navigation, can be expanded -->
             <ul class="hidden md:flex space-x-6">
                 <li><a href="#services" class="text-gray-600 hover:text-rebalance-blue transition duration-300 rounded-md p-2">Services</a></li>
@@ -212,3 +214,4 @@
 
 </body>
 </html>
+
